syntax = "proto3";

package resonance.logic.v1;

import "common/v1/types.proto";

option go_package = "github.com/ceyewan/resonance/api/gen/go/logic/v1;logicv1";

// AuthService 处理用户认证相关的请求
service AuthService {
  // Login 验证用户身份
  rpc Login(LoginRequest) returns (LoginResponse);

  // Register 创建新用户
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // ValidateToken 验证令牌的有效性
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string                   access_token = 1;
  resonance.common.v1.User user         = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
}

message RegisterResponse {
  string                   access_token = 1;
  resonance.common.v1.User user         = 2;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool                     valid    = 1;
  resonance.common.v1.User user     = 2;
  string                   username = 3;
}
